fix: gallery gap styles

--- a/src/styles/wp.css
+++ b/src/styles/wp.css
@@ -7,3 +7,97 @@
 .wp-block-kevinbatdorf-code-block-pro:not(.code-block-pro-editor) pre {
 	border-radius: 0.375rem !important;
 }
+
+.wp-site-blocks > .alignleft {
+	float: left;
+	margin-right: 2em;
+}
+.wp-site-blocks > .alignright {
+	float: right;
+	margin-left: 2em;
+}
+.wp-site-blocks > .aligncenter {
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+:where(.wp-site-blocks) > * {
+	margin-block-start: 2rem;
+	margin-block-end: 0;
+}
+:where(.wp-site-blocks) > :first-child:first-child {
+	margin-block-start: 0;
+}
+:where(.wp-site-blocks) > :last-child:last-child {
+	margin-block-end: 0;
+}
+:where(body .is-layout-flow)  > :first-child:first-child {
+	margin-block-start: 0;
+}
+:where(body .is-layout-flow)  > :last-child:last-child {
+	margin-block-end: 0;
+}
+:where(body .is-layout-flow)  > * {
+	margin-block-start: 2rem;
+	margin-block-end: 0;
+}
+:where(body .is-layout-constrained)  > :first-child:first-child {
+	margin-block-start: 0;
+}
+:where(body .is-layout-constrained)  > :last-child:last-child {
+	margin-block-end: 0;
+}
+:where(body .is-layout-constrained)  > * {
+	margin-block-start: 2rem;
+	margin-block-end: 0;
+}
+:where(body .is-layout-flex) {
+	gap: 2rem;
+}
+:where(body .is-layout-grid) {
+	gap: 2rem;
+}
+body .is-layout-flow > .alignleft {
+	float: left;
+	margin-inline-start: 0;
+	margin-inline-end: 2em;
+}
+body .is-layout-flow > .alignright {
+	float: right;
+	margin-inline-start: 2em;
+	margin-inline-end: 0;
+}
+body .is-layout-flow > .aligncenter {
+	margin-left: auto !important;
+	margin-right: auto !important;
+}
+body .is-layout-constrained > .alignleft {
+	float: left;
+	margin-inline-start: 0;
+	margin-inline-end: 2em;
+}
+body .is-layout-constrained > .alignright {
+	float: right;
+	margin-inline-start: 2em;
+	margin-inline-end: 0;
+}
+body .is-layout-constrained > .aligncenter {
+	margin-left: auto !important;
+	margin-right: auto !important;
+}
+body .is-layout-flex {
+	display: flex;
+}
+body .is-layout-flex {
+	flex-wrap: wrap;
+	align-items: center;
+}
+body .is-layout-flex > * {
+	margin: 0;
+}
+body .is-layout-grid {
+	display: grid;
+}
+body .is-layout-grid > * {
+	margin: 0;
+}
